deployment/node-red/k8s-native/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-node-red-svc
  namespace: demo-node-red
  labels:
    rollout.one-click.dev/name: node-red
spec:
  ports:
    - name: http-node-red
      protocol: TCP
      port: 1880
      targetPort: 1880
  selector:
    rollout.one-click.dev/name: node-red
  clusterIP: 10.20.3.20
  clusterIPs:
    - 10.20.3.20
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
