deployment/node-red/k8s-native/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-node-red-ingress
  namespace: demo-node-red
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    rollout.one-click.dev/name: node-red
spec:
  ingressClassName: nginx
  rules:
    - host: node-red.demo.one-click.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: http-node-red-svc
                port:
                  number: 1880
